syntax = "proto3";

package raft;

option go_package = "raft-consensus/proto";

// RAFT RPC Service
service RaftService {
    // RequestVote - Used for leader election
    rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);

    // AppendEntries - Used for log replication and heartbeat
    rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);

    // ClientRequest - Handle client operations (get/set key-value)
    rpc ClientRequest(ClientRequestMessage) returns (ClientRequestResponse);

    // GetStatus - Get node status for monitoring
    rpc GetStatus(GetStatusRequest) returns (GetStatusResponse);

    // Partition - Special RPC for network partition simulation
    rpc Partition(PartitionRequest) returns (PartitionResponse);

    // Heal - Restore connections after partition
    rpc Heal(HealRequest) returns (HealResponse);
}

// Log Entry structure
message LogEntry {
    int64 term = 1;
    int64 index = 2;
    string command = 3;  // Format: "SET key value" or "DELETE key"
}

// RequestVote RPC - Leader Election
message RequestVoteRequest {
    int64 term = 1;           // Candidate's term
    string candidate_id = 2;   // Candidate requesting vote
    int64 last_log_index = 3;  // Index of candidate's last log entry
    int64 last_log_term = 4;   // Term of candidate's last log entry
}

message RequestVoteResponse {
    int64 term = 1;           // Current term, for candidate to update itself
    bool vote_granted = 2;    // True means candidate received vote
}

// AppendEntries RPC - Log Replication & Heartbeat
message AppendEntriesRequest {
    int64 term = 1;              // Leader's term
    string leader_id = 2;        // Leader's ID for followers to redirect clients
    int64 prev_log_index = 3;    // Index of log entry immediately preceding new ones
    int64 prev_log_term = 4;     // Term of prevLogIndex entry
    repeated LogEntry entries = 5; // Log entries to store (empty for heartbeat)
    int64 leader_commit = 6;     // Leader's commit index
}

message AppendEntriesResponse {
    int64 term = 1;           // Current term, for leader to update itself
    bool success = 2;         // True if follower contained entry matching prevLogIndex and prevLogTerm
    int64 match_index = 3;    // For optimization: the highest log index known to be replicated
}

// Client Request for key-value operations
message ClientRequestMessage {
    string operation = 1;   // "GET", "SET", "DELETE"
    string key = 2;
    string value = 3;       // Only for SET operation
}

message ClientRequestResponse {
    bool success = 1;
    string value = 2;       // For GET operation
    string error = 3;       // Error message if any
    string leader_id = 4;   // Leader ID for client redirection
}

// Get Status for monitoring
message GetStatusRequest {}

message GetStatusResponse {
    string node_id = 1;
    string state = 2;           // "follower", "candidate", "leader"
    int64 current_term = 3;
    string leader_id = 4;
    int64 commit_index = 5;
    int64 last_applied = 6;
    int64 log_length = 7;
    repeated string peers = 8;
    repeated string partitioned = 9;  // Partitioned node addresses
}

// Network Partition simulation
message PartitionRequest {
    repeated string addresses = 1;  // Addresses to disconnect from
}

message PartitionResponse {
    bool success = 1;
    string message = 2;
}

// Heal network partition
message HealRequest {}

message HealResponse {
    bool success = 1;
    string message = 2;
}
